<resources>
    <string name="app_name">La rungui</string>
    <string name="app_wellecome">Por favor ingresa tu numero de telefono. Te enviaremos un SMS que incluye un codigo de verificación</string>
    <string name="app_phone">Telefono</string>
    <string name="app_add_code_verify">Ingresa el codigo que te enviamos</string>
    <string name="app_iniciar_sesion">Iniciar sesión</string>
    <string name="app_complete_information">Completa tu información</string>
    <string name="app_confirmar">Confirmar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">fcm_default:channel</string>
    <string name="addUpdateStatus">Añade una actualización</string>
    <string name="myStatus">Mi estado</string>

    <string name="help_center_title">Centro de ayuda</string>
    <string name="help_center_concers">¿Tienes inquietudes?</string>
    <string name="help_center_desc_concerns">No te preocupes, en el Centro de Ayuda de App amig@s tenemos los siguientes canales para solucionar tus preguntas.</string>
    <string name="help_center_faq">Preguntas frecuentes</string>
    <string name="help_center_mejorar">Ayudanos a mejorar</string>
    <string name="help_close">Salir</string>

</resources>