<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AiudaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@android:color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center_title"
                    android:textAppearance="@style/TextAppearance.Sans.Extra.Bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/help_center_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            android:id="@+id/title_concers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:gravity="center_horizontal"
            android:lineHeight="18sp"
            android:lineSpacingExtra="2sp"
            android:text="@string/help_center_concers"
            android:textAppearance="@style/TextAppearance.Sans.Extra.Bold"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/help_center_concers" />

        <TextView
            android:id="@+id/desc_concerns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:gravity="center_horizontal"
            android:lineHeight="18sp"
            android:lineSpacingExtra="2sp"
            android:text="@string/help_center_desc_concerns"
            android:textAppearance="@style/TextAppearance.Sans.Regular"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_concers"
            tools:text="  No te preocupes, en el Centro de Ayuda de  App Terpel tenemos los siguientes canales para solucionar tus preguntas." />




        <androidx.cardview.widget.CardView
            android:id="@+id/card_faq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_concerns">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:lineSpacingExtra="2sp"
                    android:layout_margin="14sp"
                    android:text="@string/help_center_faq"
                    android:textAppearance="@style/TextAppearance.Regular"
                    android:textColor="@color/brownish_grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/help_center_faq" />

                <ImageView
                    android:layout_width="22sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="122sp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/flecha_ios"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


             </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_faq">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:lineSpacingExtra="2sp"
                android:layout_margin="14sp"
                android:text="@string/help_center_mejorar"
                android:textAppearance="@style/TextAppearance.Regular"
                android:textColor="@color/brownish_grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/help_center_mejorar" />

            <ImageView
                android:layout_width="22sp"
                android:layout_height="32sp"
                android:layout_marginStart="138sp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/flecha_ios"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewEmail">

            <LinearLayout
                android:id="@+id/linearClose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_margin="14sp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/help_close"
                    android:textAppearance="@style/TextAppearance.Regular"
                    android:textColor="@color/brownish_grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/help_close" />

                <ImageView
                    android:id="@+id/imagViewClose"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="210sp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/closed_app"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>